# crop-sequence-boundaries-v2

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CITATION.cff  CONTRIBUTING.md  Dockerfile  README.md  pyproject.toml
.github/workflows/: build_docker.yml  ci.yaml  pages.yml  release.yml
configs/: default.yaml  local.yaml
examples/cluster/: README.md
paper/: Makefile  README.md  csb.bib  csb_cea.tex  elsarticle-num.bst  elsarticle.cls
paper/figures/: ablation_results.json  field_mismatch_examples.py  make_acres_scatter.py  make_bottom3_montage.py  make_per_class.py  make_per_tile_iou.py  make_stage_breakdown.py  per_field_iou.json  per_field_iou.py  run_ablation.py
scripts/: build_pmtiles.sbatch  conus_parity.py  conus_parity.sbatch  multi_tile_parity.py  multi_tile_parity.sbatch  parquet_to_pmtiles.py  patch_geoparquet_crs.py  prep_parity_inputs.py  prep_parity_inputs.sbatch
src/csb/: boundaries.py  cli.py  config.py  create.py  distribute.py  download.py  io.py  parallel.py  parity.py  pmtiles.py  polygonize.py  postprocess.py  prep.py  roads.py  utils.py  vector.py  visualize.py  zonal.py
tests/: conftest.py  test_cli.py  test_cli_invoke.py  test_config.py  test_create.py  test_create_pipeline.py  test_distribute_pipeline.py  test_download.py  test_e2e_pipeline.py  test_io.py  test_parallel.py  test_polygonize.py  test_polygonize_pipeline.py  test_postprocess_pipeline.py  test_prep_pipeline.py  test_vector.py  test_zonal.py
web/: app.js  index.html  style.css
