[build-system]
build-backend = "uv_build"
requires = [ "uv-build>=0.9.3,<0.10" ]

[project]
name = "csb"
version = "0.1.0"
description = "Cloud-native pipeline for generating USDA Crop Sequence Boundaries from Cropland Data Layer rasters."
readme = "README.md"
license = { text = "Unlicense" }
authors = [
  { name = "Isaac Corley", email = "isaac.corley@proton.me" },
]
requires-python = ">=3.12"
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Scientific/Engineering :: GIS",
]
dependencies = [
  "click>=8",
  "contourrs",
  "duckdb>=1",
  "exactextract",
  "numpy",
  "polars>=1.39",
  "pyarrow",
  "pyyaml",
  "rasterio",
  "rich",
  "shapely>=2",
]
urls.Homepage = "https://github.com/isaaccorley/crop-sequence-boundaries-v2"
urls.Repository = "https://github.com/isaaccorley/crop-sequence-boundaries-v2"
scripts.csb = "csb.cli:main"

[dependency-groups]
dev = [
  "geopandas",
  "pre-commit>=4.3",
  "pytest>=8.4.2",
  "pytest-cov>=7",
  "pytest-xdist>=3.8",
  "ruff>=0.14.1",
  "ty>=0.0.1a23",
]

[tool.ruff]
target-version = "py312"
line-length = 100
force-exclude = true
lint.extend-select = [
  "ANN",
  "B",
  "C4",
  "EXE",
  "FA",
  "FLY",
  "FURB",
  "G",
  "I",
  "ISC",
  "LOG",
  "PERF",
  "PGH",
  "PIE",
  "PT",
  "PYI",
  "RET",
  "RSE",
  "RUF",
  "SIM",
  "SLOT",
  "TCH",
  "TRY",
  "UP",
  "W",
]
lint.isort.known-first-party = [ "csb" ]

[tool.pytest]
ini_options.testpaths = [ "tests" ]
ini_options.addopts = [ "-n", "0" ]  # xdist available; use -n auto when suite grows past ~10s
